FIX/ Hide scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,9 @@ body {
   font-size: 16px;
   /* touch-action: pan-up; */
   cursor: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .App {
